`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

*******************************************************************************
2.2.1

2001-06-05  Kevin Layer  <layer@crikey>

	* *.el:
	- fix copyright
	- fix "permission to modify" to clarify intent (for the semanticly
	impaired) per discussion with rms

*******************************************************************************
2.2.0

2001-05-22  Charles A. Cox  <cox@pie>

	* cl/src/eli/fi-basic-lep.el: use emacs-mule encoding.  bug10686

*******************************************************************************
2.1.7

2001-05-29  Kevin Layer  <layer@crikey>

	* Makefile: use abs path to perl on windoze
	* fi-filec.el: fix filename completion for errors via nfs 
	* fi-indent.el: astore additions
	* fi-subproc.el: make localhost be the default lisp host
	* examples/emacs.el: minor fix

*******************************************************************************
Wed May 22 12:56:23 PDT 2001  Duane Rettig  <duane@beta>
	
	* fi-vers.cl: (from cox): increment version to 2.1.6

*******************************************************************************
2.1.6
	
2001-05-14  Charles A. Cox  <cox@freezer>

	* fi-basic-lep.cl: Use emacs-mule coding system when communicating
	with lisp.

*******************************************************************************
2.1.5

2001-01-05  Kevin Layer  <layer@ultra>

	* fi-subproc.el: add subprocess filter for tcp buffers, too (so
	the variable fi:subprocess-max-buffer-lines works).

*******************************************************************************
2.1.4

2001-01-03  Kevin Layer  <layer@ultra>

	* fi-subproc.el: added new fi:subprocess-max-buffer-lines

*******************************************************************************
2.1.3

2000-10-21  Kevin Layer  <layer@ultra>
